Added spacing between the columns in the advanced search area.

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
                                     <div class="row-fluid">
                                         <div class="sci-clips-advanced-search" style="display:none">
-                                            <div class="span12">
+                                            <div class="span12" style="margin-right: 10px">
                                                 <div class="controls controls-row">
                                                     <label for="author-text" class="screen-reader-only">Author:</label>
                                                     <input type="text" class="form-control sci-clips-search-input span24" id="author-text"
@@ -344,14 +344,11 @@
 
                                                 </div>
                                             </div>
-                                            <div class="span12">
-                                                <label id="article-tyoe-label">Article type:</label>
-                                                <div role="rowgroup" aria-labelledby="article-type-label">
-                                                    <label class="checkbox"><input type="checkbox" id="article_type_cdc_authored" value="CDC%20Authored%20Publications" class="form-control sci-clips-search-input"> CDC Authored Publications</label>
-                                                    <label class="checkbox"><input type="checkbox" id="article_type_cdc_vital_signs" value="CDC%20Vital%Signs" class="form-control sci-clips-search-input"> CDC Vital Signs</label>
-                                                    <label class="checkbox"><input type="checkbox" id="article_type_key_articles" value="Key%20Scientific%20Articles%20in%20Featured%20Topic%20Areas" class="form-control sci-clips-search-input"> Key Scientific Articles in Featured Topic Areas</label>
-                                                    <label class="checkbox"><input type="checkbox" id="article_type_media_noted_articles" value="Public%20Health%20Articles%20Noted%20in%20the%20Media" class="form-control sci-clips-search-input"> Public Health Articles Noted in the Media</label>
-                                                </div>
+                                            <div class="span11">
+                                                <label class="checkbox"><input type="checkbox" id="article_type_cdc_authored" value="CDC%20Authored%20Publications" class="form-control sci-clips-search-input"> CDC Authored Publications</label>
+                                                <label class="checkbox"><input type="checkbox" id="article_type_cdc_vital_signs" value="CDC%20Vital%Signs" class="form-control sci-clips-search-input"> CDC Vital Signs</label>
+                                                <label class="checkbox"><input type="checkbox" id="article_type_key_articles" value="Key%20Scientific%20Articles%20in%20Featured%20Topic%20Areas" class="form-control sci-clips-search-input"> Key Scientific Articles in Featured Topic Areas</label>
+                                                <label class="checkbox"><input type="checkbox" id="article_type_media_noted_articles" value="Public%20Health%20Articles%20Noted%20in%20the%20Media" class="form-control sci-clips-search-input"> Public Health Articles Noted in the Media</label>
                                             </div>
                                         </div>
                                     </div>
