Added spacing between publication from and publication to fields.

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
                                                 <label id="publication-year-from-label" class="screen-reader-only">From year</label>
                                                 <label id="publication-year-to-label" class="screen-reader-only">To year</label>
-                                                <div class="controls">
+                                                <div class="controls controls-row">
                                                     <input type="number" class="sci-clips-search-input span12" id="publication-year-from"
                                                            name="publication-year-from" placeholder="From year"
                                                            min="1" max="2999" aria-labelledby="publication-year-from-label">
