Added CDC Public Health Grand Rounds to article types.

--- a/index.html
+++ b/index.html
@@ -345,8 +345,10 @@
                                                 </div>
                                             </div>
                                             <div class="span11">
+                                                Filter by Article Type:
                                                 <label class="checkbox"><input type="checkbox" id="article_type_cdc_authored" value="CDC%20Authored%20Publications" class="form-control sci-clips-search-input"> CDC Authored Publications</label>
                                                 <label class="checkbox"><input type="checkbox" id="article_type_cdc_vital_signs" value="CDC%20Vital%Signs" class="form-control sci-clips-search-input"> CDC Vital Signs</label>
+                                                <label class="checkbox"><input type="checkbox" id="article_type_cdc_grand_rounds" value="CDC%20Public%20Health%20Grand%20Rounds" class="form-control sci-clips-search-input"> CDC Public Health Grand Rounds</label>
                                                 <label class="checkbox"><input type="checkbox" id="article_type_key_articles" value="Key%20Scientific%20Articles%20in%20Featured%20Topic%20Areas" class="form-control sci-clips-search-input"> Key Scientific Articles in Featured Topic Areas</label>
                                                 <label class="checkbox"><input type="checkbox" id="article_type_media_noted_articles" value="Public%20Health%20Articles%20Noted%20in%20the%20Media" class="form-control sci-clips-search-input"> Public Health Articles Noted in the Media</label>
                                             </div>
