Changed 'topic heading' to 'subject heading'

--- a/index.html
+++ b/index.html
@@ -316,9 +316,9 @@
                                                 </div>
 
                                                 <div class="controls controls-row">
-                                                    <label for="topic-heading-text" class="sci-clips-advanced-search screen-reader-only" style="display: none">Search for topic heading:</label>
-                                                    <input type="text" class="form-control sci-clips-search-input sci-clips-advanced-search span24" id="topic-heading-text"
-                                                           name="topic-heading-text" placeholder="Enter topic heading"
+                                                    <label for="subject-heading-text" class="sci-clips-advanced-search screen-reader-only" style="display: none">Search for subject heading:</label>
+                                                    <input type="text" class="form-control sci-clips-search-input sci-clips-advanced-search span24" id="subject-heading-text"
+                                                           name="subject-heading-text" placeholder="Enter subject heading"
                                                            maxlength="80" style="display: none">
                                                 </div>
 
